# mc-wiki-mcp-pypi

./: README.md  README_CN.md  pyproject.toml  requirements.txt  server.py
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: API_DOCUMENTATION.md  MODIFICATION_SUMMARY.md
src/mc_wiki_fetch_mcp/: __init__.py  __main__.py  config.py  server.py
