[project]
name = "mc-wiki-fetch-mcp"
version = "0.5.0"
description = "A MCP-based Minecraft Wiki server providing convenient access to Minecraft Wiki content via stdio, SSE and HTTP"
readme = "README.md"
authors = [
    { name = "rice_awa", email = "riceawa@rice-awa.top" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.3",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
keywords = ["minecraft", "wiki", "mcp", "server", "api", "stdio", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.scripts]
mc-wiki-fetch-mcp = "mc_wiki_fetch_mcp:main"

[project.urls]
Homepage = "https://github.com/rice-awa/mc-wiki-mcp-pypi"
Repository = "https://github.com/rice-awa/mc-wiki-mcp-pypi"
Issues = "https://github.com/rice-awa/mc-wiki-mcp-pypi/issues"
Documentation = "https://github.com/rice-awa/mc-wiki-mcp-pypi/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
